added basic footer

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,3 +154,11 @@ main section{
     text-align: center;
     margin-top: 50px;
 }
+
+/* footer Style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 120px;
+    padding: 130px 200px;
+}
